# virtual-camera

./: ACTUAL_WORKING_VIRTUAL_CAMERA_IMPLEMENTATION.md  BUILD_FIX_SUMMARY.md  CAMERA_SURFACE_VIDEO_INJECTION_GUIDE.md  COMPREHENSIVE_VIRTUAL_CAMERA_IMPLEMENTATION.md  CPP_FILES_COMPARISON_GUIDE.md  DELETE_UNNECESSARY_FILES.md  GHOSTCAM_README.md  INJECTION_ERROR_FIX.md  PROJECT_CLEANUP_SUMMARY.md  README.md  REAL_SYSTEM_CAMERA_REPLACEMENT.md  VIRTUAL_CAMERA_HACK_USAGE.md  VIRTUAL_CAMERA_IMPLEMENTATION.md  VIRTUAL_CAMERA_PROBLEM_ANALYSIS_AND_FIXES.md  VIRTUAL_CAMERA_README.md  VIRTUAL_CAMERA_REPLACEMENT_FIX.md  WORKING_VIRTUAL_CAMERA_README.md  build_and_install.bat  camera_replacement_troubleshooting.md  fix_third_party_apps.md  front_camera_selfie_guide.md  local.properties  settings.gradle.kts  system_wide_camera_guide.md  test_virtual_camera.md
app/: build.gradle.kts
app/src/androidTest/java/com/app001/virtualcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SystemWideCameraHook.cpp  advanced_hook.cpp  camera2_hook.cpp  camera_hook.cpp  improved_real_camera_hook.cpp  native-lib.cpp  plt_hook.cpp  plt_hook.h  real_camera_hook.cpp  simple_camera_replacement.cpp  system_camera_hook.cpp  system_wide_camera_hook.cpp  video_processor.cpp  video_processor.h
app/src/main/java/com/app001/virtualcamera/: CameraInterceptor.kt  GhostCamActivity.kt  MainActivity.kt  VideoFileManager.kt  VirtualCameraService.kt
app/src/main/java/com/app001/virtualcamera/camera/: CameraIntentHandler.kt  ImprovedRealCameraHook.kt  RealCameraHook.kt  SimpleCameraReplacement.kt  SimpleCameraSurfaceInjection.kt  SimpleVirtualCameraActivity.kt  SystemCameraInterceptor.kt  SystemCameraProvider.kt  SystemCameraReplacer.kt  SystemWideCameraHook.kt  VirtualCamera.kt  VirtualCamera2.kt  VirtualCameraActivity.kt  VirtualCameraManager.kt  VirtualCameraPreview.kt  VirtualCameraProvider.kt  VirtualCameraProviderService.kt
app/src/main/java/com/app001/virtualcamera/components/: BottomNavigationBar.kt
app/src/main/java/com/app001/virtualcamera/hook/: Camera2Hook.kt  CameraHook.kt  NativeCameraHook.kt
app/src/main/java/com/app001/virtualcamera/navigation/: Navigation.kt
app/src/main/java/com/app001/virtualcamera/receiver/: CameraIntentReceiver.kt
app/src/main/java/com/app001/virtualcamera/screens/: AdvancedSetupScreen.kt  GhostCamScreen.kt  HomeScreen.kt  PreviewScreen.kt  SettingsScreen.kt  VirtualCameraHackScreen.kt
app/src/main/java/com/app001/virtualcamera/service/: CameraProviderService.kt  SystemCameraService.kt  SystemWideVirtualCameraService.kt  VideoFeedService.kt  VirtualCameraProviderService.kt  VirtualCameraService.kt
app/src/main/java/com/app001/virtualcamera/system/: SystemVirtualCamera.kt
app/src/main/java/com/app001/virtualcamera/test/: CameraTestActivity.kt
app/src/main/java/com/app001/virtualcamera/ui/components/: CameraPreviewScreen.kt
app/src/main/java/com/app001/virtualcamera/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/app001/virtualcamera/ui/viewmodel/: VirtualCameraViewModel.kt
app/src/main/java/com/app001/virtualcamera/utils/: PermissionsHelper.kt  RootUtils.kt  VideoPathManager.kt
app/src/main/java/com/app001/virtualcamera/video/: VideoInfo.kt  VideoOverlayManager.kt  VideoStreamManager.kt
app/src/main/res/drawable/: button_close.xml  button_switch.xml
app/src/main/res/layout/: activity_camera_test.xml  activity_simple_virtual_camera.xml  activity_virtual_camera.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: activity_main.xml
app/src/test/java/com/app001/virtualcamera/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
